--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <title>Hello world</title>
-<link rel="stylesheet" href="main.css">
+<link  href="main.css" rel="stylesheet">
 //prueba de version
 <head>
-
+<h1>hello world</h1>
 </head>
 </html>
