--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Hello world!! </title>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="main2.css">
 //prueba de version
 <head>
 
