--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<title>Hello world</title>
+<title>Macario Ramirez Erick Joshua</title>
 <link  href="main.css" rel="stylesheet">
 //prueba de version
 <head>
 <h1>hello world</h1>
+  
+  <h1> Servidor montado correctamente..</h1>
+  <h1> 
 </head>
 </html>
