--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html> 
 <html>
 <link  href="main.css" rel="stylesheet">
 //prueba de version
 <head>
-<title>Macario Ramirez Erick Joshua</title>
-<h1>hello world</h1>
+<title>Curso: desarrollo Web</title>
+<h1> Técnicas para la enseñanza de Desarrollo Web</h1>
+  <p> Recursos del curso. </p>
+  <p> </p>
   
-  <h1> Servidor montado correctamente..</h1>
-  <h1> 
+  
+  
 </head>
 </html>
