--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <link  href="main.css" rel="stylesheet">
 <head>
 <title>Curso: desarrollo Web</title>
+  </head>
+  <body>
 <h1> Técnicas para la enseñanza de Desarrollo Web</h1>
   <p> Recursos del curso. </p>
   <p> </p>
+  </body>
   
   
-  
-</head>
+
 </html>
