--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <h1> Técnicas para la enseñanza de Desarrollo Web</h1>
   <p> Recursos del curso. </p>
   <p> </p>
+ 
+    
+    
+<a href="http://ascii.cl/es/codigos-html.htm">C&oacute;digos
+HTML.</a>
+<a href="http://www.w3schools.com/tags/">Referencia
+HTML.</a> 
+  
   </body>
   
   
