--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
  
     
     
-<a href="http://ascii.cl/es/codigos-html.htm">C&oacute;digos
-HTML.</a>
-<a href="http://www.w3schools.com/tags/">Referencia
-HTML.</a> 
+<a href="http://ascii.cl/es/codigos-html.htm">Codigos HTML.</a>
+<a href="http://www.w3schools.com/tags/">Referencia HTML.</a> 
   
   </body>
   
