--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <h1> Técnicas para la enseñanza de Desarrollo Web</h1>
   <p> Recursos del curso. </p>
   <p> </p>
- 
     
+   <p> 2.c Ligas a archivos </p>
+<a href=“archivo1.pdf">Archivo 1</a> 
+    <br>
+<a href=“archivo2.pdf">Archivo 2</a>  
     
+   <p> 2. d Ligas a paginas visitadas </p>   
 <a href="http://ascii.cl/es/codigos-html.htm">Codigos HTML.</a>
+    <br>
 <a href="http://www.w3schools.com/tags/">Referencia HTML.</a> 
   
   </body>
