--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <p> Probando Formatos </p>
     <br> 
     <b> Mamá; soy paquito. </b> Negritas. <br>
-    <em> Mamá; soy paquito.</em> 
-    <i> Mamá; soy paquito. </i> 
-    <small> Mamá; soy paquito. </small>
-    <strong> Mamá; soy paquito.</strong> 
-    <sub>Mamá; soy paquito.</sub> 
-    <ins>Mamá; soy paquito. </ins>
-    <del>Mamá; soy paquito. </del> 
-    <mark>Mamá; soy paquito.</mark>
+    <em> Mamá; soy paquito.</em> <br>
+    <i> Mamá; soy paquito. </i> <br>
+    <small> Mamá; soy paquito. </small> Texto pequeño <br>
+    <strong> Mamá; soy paquito.</strong> Texto Importante <br>
+    <sub>Mamá; soy paquito.</sub> Subindice <br>
+    <ins>Mamá; soy paquito. </ins> Subrayado <br>
+    <del>Mamá; soy paquito. </del> Tachado  <br>
+    <mark>Mamá; soy paquito.</mark> "Marcatextos" <br>
       
   </body>
   
