--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <p> Probando Formatos </p>
     <br> 
     <b> Mamá; soy paquito. </b> Negritas. <br>
-    <em> Mamá; soy paquito.</em> <br>
-    <i> Mamá; soy paquito. </i> <br>
+    <em> Mamá; soy paquito.</em> Enfatizado <br>
+    <i> Mamá; soy paquito. </i> Cursiva <br>
     <small> Mamá; soy paquito. </small> Texto pequeño <br>
     <strong> Mamá; soy paquito.</strong> Texto Importante <br>
     <sub>Mamá; soy paquito.</sub> Subindice <br>
