--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <br> 
     <b> Mamá; soy paquito. </b> Negritas. <br>
     <em> Mamá; soy paquito.</em> Enfatizado <br>
-    <i> Mamá; soy paquito. </i> Cursiva <br>
+    
+    <p> <i> Mamá; soy paquito. </i> </p> Cursiva  <br> 
     <small> Mamá; soy paquito. </small> Texto pequeño <br>
     <strong> Mamá; soy paquito.</strong> Texto Importante <br>
     <sub>Mamá; soy paquito.</sub> Subindice <br>
