--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html>
-<link  href="main.css" rel="stylesheet">
+<!--link  href="main.css" rel="stylesheet"-->
 <head>
 <title>Curso: desarrollo Web</title>
   </head>
-  <body>
+  <body  style="background-color:#cc9900;">
 <h1> Técnicas para la enseñanza de Desarrollo Web</h1>
   <p> Recursos del curso. </p>
   <p> </p>
