--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Curso: desarrollo Web</title>
   </head>
-  <body  style="background-color:#cc9900;">
+  <body  style="background-color:white;">
 <h1> Técnicas para la enseñanza de Desarrollo Web</h1>
   <p> Recursos del curso. </p>
   <p> </p>
