--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <!-Codigo comentado-->
   <p>
-    <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.png" alt="colorpicker"height="60" width="70"></a> 
+    <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.jpg" alt="colorpicker"height="60" width="70"></a> 
   </p>
   </body>
   
