--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <mark>Mamá; soy paquito.</mark> "Marcatextos" <br>
     
     <!-Codigo comentado-->
-  <p>
+  <p style="text-align:center;">
     <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.jpg" alt="colorpicker"height="60" width="70"></a> 
-  </p>
+  <i>Selector de colores.</i> </p>
   </body>
   
   
