--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <p style="text-align:center">
     <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.jpg" alt="colorpicker"height="60" width="70"></a> 
   
-   <i>Selector de colores.</i> </p>
+   <br><i>Selector de colores.</i> </p>
   </body>
   
   
