--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
     <mark>Mamá; soy paquito.</mark> "Marcatextos" <br>
     
     <!-Codigo comentado-->
+  <div style="background-color:#ffffff">
   <p style="text-align:center">
     <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.jpg" alt="colorpicker"height="60" width="70"></a> 
    <br>
    <i>Selector de colores.</i> </p>
+   
+   </div
   </body>
   
   
