--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <mark>Mamá; soy paquito.</mark> "Marcatextos" <br>
     
     <!-Codigo comentado-->
-  <div style="background-color:#ffffff">
+  <div style="background-color:#ffffff;">
   <p style="text-align:center">
     <a href="http://www.w3schools.com/tags/ref_colorpicker.asp"> <img src="colorpicker.jpg" alt="colorpicker"height="60" width="70"></a> 
    <br>
