--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
    <i>Selector de colores.</i> </p>
    
    </div
+   
+   <br><br>
+<table >
+ <tr> <th>propiedad</th>
+<th>valores</th>
+<th>descripción</th> </tr> 
+<tr>
+<td>Celda 1</td>
+<td>Celda 2</td>
+<td>Celda 3</td> </tr>
+<tr> <td>Celda 4</td>
+<td>Celda 5</td>
+<td>Celda 6</td> </tr>
+</table>
+<br><br>
+   
+   
   </body>
   
   
