--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
 </table>
 <br><br>
    
+   <p>Valores para list-style-type</p
+   <ul style="list-style-type:square">
+<li> triangulo </li>
+<li> circulo </li>
+<li> cuadrado </li>
+<li> none </li>
+</ul>
+   
+  <p>Tipos de listas ordenadas:</p>
+  <ol type="1">
+<li>N&uacute;meros.</li>
+<li>Mayusculas.</li>
+<li>Minusculas.</li>
+<li>Romanos.</li>
+<li>Romanos Minusculas.</li> </ol>
    
   </body>
   
