--- a/index.html
+++ b/index.html
@@ -83,8 +83,28 @@
 <li>Romanos.</li>
 <li>Romanos Minusculas.</li> </ol>
    
-  </body>
-  
-  
 
+  
+  <form action="/action_page.php" method="get">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="Submit">
+  </form>
+   
+  <form action="procesando_form.php">
+  <fieldset><legend>Catalogo de controles de entrada:</legend>
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="Submit">
+  </fieldset> 
+  </form> 
+  <br>
+  <br>
+  
+  
+  </body>
 </html>
